--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,171 +3,182 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_margin="16dp"
     tools:context=".MainActivity">
 
-    <LinearLayout
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:text="@string/net_salary"
-            android:textColor="@color/black"
-            android:textSize="14sp" />
+        android:layout_above="@+id/included"
+        android:layout_margin="16dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
+        android:scrollbars="none">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:background="@drawable/bg_rounded_corners_white_outline"
-            android:orientation="horizontal">
+            android:orientation="vertical">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginHorizontal="16dp"
-                android:paddingTop="8dp"
-                android:paddingBottom="8dp"
-                android:text="@string/ghs"
+                android:layout_marginTop="20dp"
+                android:text="@string/net_salary"
                 android:textColor="@color/black"
-                android:textSize="18sp"
-                android:textStyle="bold" />
+                android:textSize="14sp" />
 
-            <EditText
-                android:id="@+id/net_value_edit"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@drawable/bg_edit_text"
-                android:hint="0.00"
-                android:inputType="phone"
-                android:maxLength="8"
-                android:maxLines="1"
-                android:padding="16dp" />
+                android:layout_marginTop="10dp"
+                android:background="@drawable/bg_rounded_corners_white_outline"
+                android:orientation="horizontal">
 
-        </LinearLayout>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="16dp"
+                    android:paddingTop="8dp"
+                    android:paddingBottom="8dp"
+                    android:text="@string/ghs"
+                    android:textColor="@color/black"
+                    android:textSize="18sp"
+                    android:textStyle="bold" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:text="@string/lunch_allowance"
-            android:textColor="@color/black"
-            android:textSize="14sp" />
+                <EditText
+                    android:id="@+id/net_value_edit"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/bg_edit_text"
+                    android:hint="0.00"
+                    android:inputType="phone"
+                    android:maxLength="8"
+                    android:maxLines="1"
+                    android:padding="16dp" />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:background="@drawable/bg_rounded_corners_white_outline"
-            android:orientation="horizontal">
+            </LinearLayout>
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginHorizontal="16dp"
-                android:paddingTop="8dp"
-                android:paddingBottom="8dp"
-                android:text="@string/ghs"
+                android:layout_marginTop="20dp"
+                android:text="@string/lunch_allowance"
                 android:textColor="@color/black"
-                android:textSize="18sp"
-                android:textStyle="bold" />
+                android:textSize="14sp" />
 
-            <EditText
-                android:id="@+id/lunch_allow_edit"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@drawable/bg_edit_text"
-                android:hint="0.00"
-                android:inputType="phone"
-                android:maxLength="8"
-                android:maxLines="1"
-                android:padding="16dp" />
+                android:layout_marginTop="10dp"
+                android:background="@drawable/bg_rounded_corners_white_outline"
+                android:orientation="horizontal">
 
-        </LinearLayout>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="16dp"
+                    android:paddingTop="8dp"
+                    android:paddingBottom="8dp"
+                    android:text="@string/ghs"
+                    android:textColor="@color/black"
+                    android:textSize="18sp"
+                    android:textStyle="bold" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:text="@string/transportation_allowance"
-            android:textColor="@color/black"
-            android:textSize="14sp" />
+                <EditText
+                    android:id="@+id/lunch_allow_edit"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/bg_edit_text"
+                    android:hint="0.00"
+                    android:inputType="phone"
+                    android:maxLength="8"
+                    android:maxLines="1"
+                    android:padding="16dp" />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:background="@drawable/bg_rounded_corners_white_outline"
-            android:orientation="horizontal">
+            </LinearLayout>
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginHorizontal="16dp"
-                android:paddingTop="8dp"
-                android:paddingBottom="8dp"
-                android:text="@string/ghs"
+                android:layout_marginTop="20dp"
+                android:text="@string/transportation_allowance"
                 android:textColor="@color/black"
-                android:textSize="18sp"
-                android:textStyle="bold" />
+                android:textSize="14sp" />
 
-            <EditText
-                android:id="@+id/transportation_allow_edit"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@drawable/bg_edit_text"
-                android:hint="0.00"
-                android:inputType="phone"
-                android:maxLength="8"
-                android:maxLines="1"
-                android:padding="16dp" />
+                android:layout_marginTop="10dp"
+                android:background="@drawable/bg_rounded_corners_white_outline"
+                android:orientation="horizontal">
 
-        </LinearLayout>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="16dp"
+                    android:paddingTop="8dp"
+                    android:paddingBottom="8dp"
+                    android:text="@string/ghs"
+                    android:textColor="@color/black"
+                    android:textSize="18sp"
+                    android:textStyle="bold" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:text="@string/housing_allowance_month"
-            android:textColor="@color/black"
-            android:textSize="14sp" />
+                <EditText
+                    android:id="@+id/transportation_allow_edit"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/bg_edit_text"
+                    android:hint="0.00"
+                    android:inputType="phone"
+                    android:maxLength="8"
+                    android:maxLines="1"
+                    android:padding="16dp" />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:background="@drawable/bg_rounded_corners_white_outline"
-            android:orientation="horizontal">
+            </LinearLayout>
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginHorizontal="16dp"
-                android:paddingTop="8dp"
-                android:paddingBottom="8dp"
-                android:text="@string/ghs"
+                android:layout_marginTop="20dp"
+                android:text="@string/housing_allowance_month"
                 android:textColor="@color/black"
-                android:textSize="18sp"
-                android:textStyle="bold" />
+                android:textSize="14sp" />
 
-            <EditText
-                android:id="@+id/housing_allow_edit"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@drawable/bg_edit_text"
-                android:hint="0.00"
-                android:inputType="phone"
-                android:maxLength="8"
-                android:maxLines="1"
-                android:padding="16dp" />
+                android:layout_marginTop="10dp"
+                android:background="@drawable/bg_rounded_corners_white_outline"
+                android:orientation="horizontal">
 
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="16dp"
+                    android:paddingTop="8dp"
+                    android:paddingBottom="8dp"
+                    android:text="@string/ghs"
+                    android:textColor="@color/black"
+                    android:textSize="18sp"
+                    android:textStyle="bold" />
+
+                <EditText
+                    android:id="@+id/housing_allow_edit"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/bg_edit_text"
+                    android:hint="0.00"
+                    android:inputType="phone"
+                    android:maxLength="8"
+                    android:maxLines="1"
+                    android:padding="16dp" />
+
+            </LinearLayout>
         </LinearLayout>
-    </LinearLayout>
 
+    </ScrollView>
 
     <include
         android:id="@+id/included"
